# week1-NG201

./: app.py  main.py  pyproject.toml  requirements.txt  sales_data_sample 2.xls
