[project]
name = "week1-statistic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "streamlit>=1.54.0",
    "streamlit-dynamic-filters>=0.1.9",
    "watchdog>=6.0.0",
    "xlrd>=2.0.2",
]
